name:                snaplet-redson
version:             0.1.0.0
synopsis:            CRUD for JSON data with Redis storage
homepage:            https://github.com/dzhus/snaplet-redson/
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          <dima@dzhus.org>
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: git://github.com/dzhus/snaplet-redson.git

library
  ghc-options: -Wall
  hs-source-dirs: src

  exposed-modules:      Snap.Snaplet.Redson
  
  build-depends:        
    aeson               == 0.6.*,
    base                == 4.*,
    bytestring          == 0.9.*,
    containers          == 0.4.*,
    data-lens           >= 2.0.1 && < 2.1,
    data-lens-template  == 2.1.*,
    hedis               == 0.3.*,
    heist               == 0.7.*,
    mtl                 == 2.*,
    snap                >= 0.7.1 && < 0.8,
    snap-core           == 0.7.*,
    snaplet-redis       == 0.1.*,
    utf8-string         == 0.3.*,
    websockets          == 0.5.*,
    websockets-snap     == 0.5.*
