name:                snaplet-redson
version:             0.1.0.0
synopsis:            CRUD for JSON data with Redis storage
homepage:            https://github.com/dzhus/snaplet-redson/
bug-reports:         https://github.com/dzhus/snaplet-redson/issues/
license:             BSD3
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          <dima@dzhus.org>
category:            Snap, Web
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.4.1

source-repository head
  type:     git
  location: git://github.com/dzhus/snaplet-redson.git

library
  ghc-options: -Wall -fno-warn-unused-do-bind
  hs-source-dirs: src

  exposed-modules:      Snap.Snaplet.Redson,
                        Snap.Snaplet.Redson.Snapless.CRUD,
                        Snap.Snaplet.Redson.Snapless.Metamodel,
                        Snap.Snaplet.Redson.Util
  other-modules:        Snap.Snaplet.Redson.Permissions,
                        Snap.Snaplet.Redson.Search

  build-depends:        
    aeson               == 0.6.*,
    base                == 4.*,
    bytestring          == 0.9.*,
    configurator        == 0.2.*,
    containers          == 0.4.*,
    data-lens           >= 2.0.1 && < 2.1,
    data-lens-template  == 2.1.*,
    easy-file           == 0.1.*,
    hedis               == 0.3.*,
    mtl                 == 2.*,
    snap                >= 0.7.1 && < 0.8,
    snap-core           == 0.7.*,
    snaplet-redis       == 0.1.*,
    text                == 0.11.*,
    utf8-string         == 0.3.*,
    websockets          == 0.5.*,
    websockets-snap     == 0.5.*
